version 1.1. changed redis set name from dynamic to corresponding artidactid(prepare for multi-project analysis)